# swagger_output.json
@@ -13,7 +13,7 @@
   "paths": {
     "/": {
       "get": {
-        "description": "",
+        "description": "The root of the project",
         "responses": {
           "200": {
             "description": "OK"
@@ -23,7 +23,7 @@
     },
     "/api-docs": {
       "get": {
-        "description": "",
+        "description": "The Swagger API test",
         "responses": {
           "default": {
             "description": ""
@@ -33,7 +33,7 @@
     },
     "/accounts/": {
       "get": {
-        "description": "",
+        "description": "List all accounts API",
         "produces": [
           "application/json"
         ],
@@ -47,7 +47,10 @@
         }
       },
       "post": {
-        "description": "",
+        "description": "Post a new account API",
+        "consumes": [
+          "application/json"
+        ],
         "produces": [
           "application/json"
         ],
@@ -55,11 +58,44 @@
           {
             "name": "body",
             "in": "body",
+            "description": "Account to be created",
+            "required": true,
             "schema": {
               "type": "object",
+              "required": [
+                "account_id",
+                "limit",
+                "products"
+              ],
               "properties": {
                 "account_id": {
-                  "example": "any"
+                  "type": "integer",
+                  "description": "Unique account ID.",
+                  "example": 898989
+                },
+                "limit": {
+                  "type": "integer",
+                  "minimum": 9000,
+                  "description": "Credit limit for the account.",
+                  "example": 9000
+                },
+                "products": {
+                  "type": "array",
+                  "minItems": 1,
+                  "description": "List of products associated with account.",
+                  "items": {
+                    "type": "string",
+                    "description": "Product name",
+                    "example": "CurrencyService"
+                  },
+                  "example": [
+                    "Brokerage",
+                    "CurrencyService",
+                    "Derivatives",
+                    "InvestmentFund",
+                    "Commodity",
+                    "InvestmentStock"
+                  ]
                 }
               }
             }
@@ -99,7 +135,73 @@
         }
       },
       "put": {
-        "description": "",
+        "description": "The API to update an account",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "The id of account to update"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "The files to update (only edit what needs to be changed)",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "account_id": {
+                  "type": "integer",
+                  "description": "Unique account ID.",
+                  "example": 898989
+                },
+                "limit": {
+                  "type": "integer",
+                  "minimum": 9000,
+                  "description": "Credit limit for the account.",
+                  "example": 9000
+                },
+                "products": {
+                  "type": "array",
+                  "minItems": 1,
+                  "description": "List of products associated with account.",
+                  "items": {
+                    "type": "string",
+                    "description": "Product name",
+                    "example": "CurrencyService"
+                  },
+                  "example": [
+                    "Brokerage",
+                    "CurrencyService",
+                    "Derivatives",
+                    "InvestmentFund",
+                    "Commodity",
+                    "InvestmentStock"
+                  ]
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      },
+      "delete": {
+        "description": "The API to delete an account with id",
         "produces": [
           "application/json"
         ],
